WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268449
[GStreamer][WebRTC] Deadlock during re-negotiation
https://bugs.webkit.org/show_bug.cgi?id=268449
Summary
[GStreamer][WebRTC] Deadlock during re-negotiation
Philippe Normand
Reported
2024-01-31 05:24:37 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-01-31 05:29:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23572
EWS
Comment 2
2024-02-01 06:42:57 PST
Committed
273906@main
(42834d5bf877): <
https://commits.webkit.org/273906@main
> Reviewed commits have been landed. Closing PR #23572 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-01 06:43:13 PST
<
rdar://problem/122095376
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug