Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.h
@@ -60,13 +60,18 @@ public:
     virtual void setParameters(GUniquePtr<GstStructure>&&) { }
 
 protected:
-    explicit RealtimeOutgoingMediaSourceGStreamer(const RefPtr<UniqueSSRCGenerator>&, const String& mediaStreamId, MediaStreamTrack&);
+    enum Type {
+        Audio,
+        Video
+    };
+    explicit RealtimeOutgoingMediaSourceGStreamer(Type, const RefPtr<UniqueSSRCGenerator>&, const String& mediaStreamId, MediaStreamTrack&);
 
     void initializeFromTrack();
     virtual void sourceEnabledChanged();
 
     bool isStopped() const { return m_isStopped; }
 
+    Type m_type;
     String m_mediaStreamId;
     String m_trackId;
 
@@ -94,13 +99,18 @@ protected:
     GUniquePtr<GstStructure> m_parameters;
     GRefPtr<GstElement> m_fallbackSource;
 
+    struct PayloaderState {
+        unsigned seqnum;
+    };
+    std::optional<PayloaderState> m_payloaderState;
+
 private:
     void sourceMutedChanged();
 
     void stopOutgoingSource();
 
     virtual RTCRtpCapabilities rtpCapabilities() const = 0;
-    virtual void codecPreferencesChanged(const GRefPtr<GstCaps>&) { }
+    void codecPreferencesChanged(const GRefPtr<GstCaps>&);
 
     virtual void connectFallbackSource() { }
     virtual void unlinkOutgoingSource() { }
@@ -111,6 +121,10 @@ private:
     void trackEnabledChanged(MediaStreamTrackPrivate&) override { sourceEnabledChanged(); }
     void trackSettingsChanged(MediaStreamTrackPrivate&) override { initializeFromTrack(); }
     void trackEnded(MediaStreamTrackPrivate&) override { }
+
+    void unlinkPayloader();
+
+    GRefPtr<GstCaps> m_pendingCodecPreferences;
 };
 
 } // namespace WebCore
